# harbour-Berlin-Vegan

./: .gitignore  .gitmodules  .travis.yml  BerlinVegan.desktop  BerlinVegan.pro  BerlinVeganTests.pro  CMakeLists.txt  LICENSE  README.md  TODO.txt  harbour-berlin-vegan.desktop  resources.qrc
android/: AndroidManifest.xml  build.gradle
android/res/values/: strings.xml
components-felgo/: CMakeLists.txt
components-felgo/qml/: IconButton.qml  Map.qml  MapReCenterButton.qml  MenuItem.qml  NavigationStackWithPushAttached.qml  Theme.qml  TimePickerDialog.qml
components-generic/: CMakeLists.txt
components-generic/qml/: CollapsibleItem.qml  Database.js  DistanceAlgorithms.js  IconToolBar.qml  VenueDescriptionHeader.qml  VenueListItem.qml  VenueSubTypeDefinitions.qml  tinycolor.js
components-sailfish/: MapReCenterButton.qml  MenuItem.qml  Platform.qml  SearchField.qml  resources-components-sailfish.qrc
icons/: icon.xcf  icon2.xcf  icon3.xcf  icon4.xcf  icon5.xcf
icons/Sailfish-Apps-icon-template/Sailfish-Apps-icon-library/: readme.txt
icons/Sailfish-Apps-icon-template/Sailfish-Apps-icon-library/ai/: icon-launcher-amb-aloe.ai  icon-launcher-amb-black.ai  icon-launcher-amb-red.ai  (+30 more)
icons/Sailfish-Apps-icon-template/Sailfish-Apps-icon-template/: icon-launcher-template.ai  readme.txt
ios/: Launch.xib  Project-Info.plist
qml/: BerlinVegan.qml  harbour-berlin-vegan.qml
qml/JSONListModel/: Example.qml  JSONListModel.qml
qml/Sailfish/Silica/: ApplicationWindow.qml  BusyIndicator.qml  CoverAction.qml  Label.qml  ListItem.qml  MenuItem.qml  SilicaListView.qml  Theme.qml  qmldir
qml/Silica4v-play/: ApplicationWindow.qml  BusyIndicator.qml  Button.qml  CoverActionList.qml  DetailItem.qml  Label.qml  ListItem.qml  OpacityRampEffect.qml  OpacityRampEffectBase.qml  Page.qml  PageHeader.qml  SearchField.qml  SectionHeader.qml  Separator.qml  SilicaFlickable.qml  SilicaListView.qml  Text.qml  TextSwitch.qml  TruncationMode.qml  qmldir  resources-Silica4v-play.qrc  resources-v-play.qrc
qml/Silica4v-play/qml/: config.json
qml/components/: CollapsibleItem.qml  GastroLocationDescriptionAlgorithms.js  GastroLocationDetails.qml  IconToolBar.qml  JSONDownloadHelper.js  JsonDownloadHelper.qml  OpeningHoursModel.qml  OpeningHoursModelAlgorithms.js  VenueDescriptionAlgorithms.js  VenueDescriptionHeader.qml  VenueDetails.qml  distance.js
qml/components-Sailfish/: ActionMenuItem.qml  Icon.qml  IconButton.qml  Image.qml  Map.qml  MenuItem.qml  NavigationMenu.qml  Page.qml  Platform.qml  RadioButton.qml  SectionHeader.qml  Theme.qml  qmldir  resources-components-Sailfish.qrc
qml/components-felgo/: ActionMenuItem.qml  CustomOpenTextSwitch.qml  DetailItem.qml  Image.qml  Map.qml  MapReCenterButton.qml  MenuItem.qml  NavigationMenu.qml  NavigationStackWithPushAttached.qml  Page.qml  Platform.qml  RadioButton.qml  SearchField.qml  SectionHeader.qml  TextSwitch.qml  Theme.qml  TimePickerDialog.qml  ValueSelector.qml  qmldir  resources-components-felgo.qrc
qml/components-generic/: CollapsibleItem.qml  Collection.qml  ColoredTag.qml  Database.js  IconButtonWithText.qml  IconToolBar.qml  JsonDownloadHelper.qml  OpeningHoursModel.qml  OpeningHoursModelAlgorithms.js  PageIndicator.qml  SwipeView.qml  VeganMarker.qml  VenueDescriptionAlgorithms.js  VenueDescriptionHeader.qml  VenueDetails.qml  VenueListItem.qml  VenueSubTypeDefinition.qml  VenueSubTypeDefinitions.qml  VenueSubTypeTag.qml  VenueSubTypeTagCloud.qml  distance.js  qmldir  resources-components-generic.qrc
qml/components-sailfish/: ActionMenuItem.qml  CustomOpenTextSwitch.qml  DetailItem.qml  Image.qml  MapReCenterButton.qml  NavigationMenu.qml  SearchField.qml  SectionHeader.qml  TextSwitch.qml  Theme.qml  ValueSelector.qml  qmldir  resources-components-sailfish.qrc
qml/components-v-play/: ActionMenuItem.qml  Icon.qml  IconButton.qml  Image.qml  Map.qml  MapReCenterButton.qml  MenuItem.qml  NavigationMenu.qml  NavigationStackWithPushAttached.qml  Page.qml  Platform.qml  RadioButton.qml  SearchField.qml  SectionHeader.qml  Theme.qml  qmldir  resources-components-v-play.qrc
qml/cover/: CoverPage.qml
qml/pages/: FirstPage.qml  FoodLocationList.qml  GastroLocationDescription.qml  GastroLocationDescriptionHeader.qml  GastroLocationDetails.qml  GastroLocationList.qml  GastroLocations.json  ShoppingLocations.json  VenueDescription.qml  VenueFilterSettings.qml  VenueList.qml  VenueMapOverviewPage.qml  VenueMapPage.qml  VenueMapWidget.qml
qml/pages/about/: AboutBerlinVegan.qml  LicenseViewer.qml  ThirdPartySoftware.qml
qml/silica4felgo/: ApplicationWindow.qml  BusyIndicator.qml  Button.qml  CoverAction.qml  CoverActionList.qml  Label.qml  ListItem.qml  OpacityRampEffectBase.qml  PageHeader.qml  Separator.qml  SilicaListView.qml  Text.qml  TextSwitch.qml  qmldir  resources-silica4felgo.qrc
qml/silica4felgo/qml/: config.json
rpm/: BerlinVegan.changes.in  BerlinVegan.spec  BerlinVegan.yaml  harbour-berlin-vegan.changes
silica4felgo/: CMakeLists.txt
silica4felgo/qml/: Label.qml  OpacityRampEffect.qml  OpacityRampEffectBase.qml  config.json
silica4felgo/shaders/: opacity_ramp.frag  opacity_ramp.vert
silica4felgo/src/: TruncationMode.h
src/: BerlinVegan.cpp  FileIO.cpp  FileIO.h  OpeningHoursAlgorithms.h  OpeningHoursModel.cpp  OpeningHoursModel.h  SailfishAndroidBridge.cpp  SailfishAndroidBridge.h  StealingFreeListView.h  TruncationMode.h  VenueFilterProxyModel.cpp  VenueFilterProxyModel.h  VenueHandle.h  VenueModel.cpp  VenueModel.h  VenueSortFilterProxyModel.cpp  VenueSortFilterProxyModel.h  VenueSortProxyModel.cpp  VenueSortProxyModel.h
src/Sailfish/Silica/: CMakeLists.txt  OpacityRampEffect.qml  OpacityRampEffectBase.qml  Separator.qml  SilicaFlickable.qml
tests/: BerlinVeganTests.cpp  OpeningHoursAlgorithmsTests.cpp  OpeningHoursAlgorithmsTests.h
translations/: BerlinVegan-de.ts  BerlinVegan.ts  harbour-berlin-vegan-de.qm  harbour-berlin-vegan-de.ts  harbour-berlin-vegan-en.qm  harbour-berlin-vegan-en.ts  harbour-berlin-vegan-nl.qm  harbour-berlin-vegan-nl.ts  harbour-berlin-vegan.qm  harbour-berlin-vegan.ts
(+38 files in other folders)
